logging/dummy-logger/dapr-depl-logger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-logger
spec:
  replicas: 1 
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1 
  selector:
    matchLabels:
      app: dummy-logger
  template:
    metadata:
      labels:
        app: dummy-logger
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "dummy-logger"
        dapr.io/app-port: "80"
    spec:
      containers:
      - name: dummy-logger
        image: denniszielke/dummy-logger:latest  
        ports:
        - containerPort: 80
        imagePullPolicy: Always   
        livenessProbe:
          httpGet:
            path: /ping
            port: 80
        readinessProbe:
          httpGet:
            path: ping
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
        resources:
          requests:
            memory: "30Mi"
            cpu: "50m"
          limits:
            memory: "100Mi"
            cpu: "100m"
