logging/dummy-logger/dapr-pod-logger.yaml
apiVersion: v1
kind: Pod
metadata:
  name: west-dummy-logger
  namespace: default
  labels:
    app: dummy-logger
  annotations:
    dapr.io/enabled: "true"
    dapr.io/app-id: "dummy-logger"
    dapr.io/app-port: "80"
    dapr.io/config: "appconfig"
spec:
  containers:
    - name: west-dummy-logger
      image: denniszielke/dummy-logger:latest
      imagePullPolicy: Always
      ports:
        - containerPort: 80
          name: http
          protocol: TCP
      resources:
        requests:
          memory: "128Mi"
          cpu: "100m"
        limits:
          memory: "256Mi"
          cpu: "200m"
