logging/dummy-logger/depl-echo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver13
spec:
  replicas: 1 
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1 
  selector:
    matchLabels:
      app: echoserver
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
      - name: echoserver
        image: k8s.gcr.io/echoserver:1.10  
        ports:
        - containerPort: 8080
        imagePullPolicy: Always   
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
