logging/dummy-logger/depl-explorer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: explorer
spec:
  replicas: 2 
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1 
  selector:
    matchLabels:
      app: explorer
  template:
    metadata:
      labels:
        app: explorer
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "80"
        prometheus.io/scheme: "http"
    spec:
      containers:
      - name: dummy-logger
        image: ghcr.io/denniszielke/container-apps/js-dapr-explorer:latest
        ports:
        - containerPort: 3000
        imagePullPolicy: Always 
        livenessProbe:
          httpGet:
            path: /ping
            port: 3000
        readinessProbe:
          httpGet:
            path: /ping
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5
        resources:
          requests:
            memory: "30Mi"
            cpu: "50m"
          limits:
            memory: "100Mi"
            cpu: "100m"
