logging/dummy-logger/depl-logger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-logger
spec:
  replicas: 4 
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1 
  selector:
    matchLabels:
      app: dummy-logger
  template:
    metadata:
      labels:
        app: dummy-logger
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "80"
        prometheus.io/scheme: "http"
    spec:
      containers:
      - name: dummy-logger
        image: denniszielke/dummy-logger:latest  
        ports:
        - containerPort: 80
        imagePullPolicy: Always   
        livenessProbe:
          httpGet:
            path: /ping
            port: 80
        readinessProbe:
          httpGet:
            path: /ping
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
        resources:
          requests:
            memory: "58Mi"
            cpu: "50m"
          limits:
            memory: "156Mi"
            cpu: "100m"
