logging/dummy-logger/pod-logger.yaml
apiVersion: v1
kind: Pod
metadata:
  name: west-dummy-logger
  namespace: default
  labels:
    app: dummy-logger
spec:
  containers:
    - name: west-dummy-logger
      image: denniszielke/dummy-logger:latest
      imagePullPolicy: Always
      ports:
        - containerPort: 80
          name: http
          protocol: TCP
      resources:
        requests:
          memory: "128Mi"
          cpu: "100m"
        limits:
          memory: "256Mi"
          cpu: "200m"
