logging/dummy-logger/svc-cluster-explorer.yaml
apiVersion: v1
kind: Service
metadata:
  name: explorer-cluster
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: explorer
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: explorer
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: explorer
  type: ClusterIP
