logging/dummy-logger/svc-cluster-logger.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummy-logger-cluster
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: dummy-logger
  type: ClusterIP
