logging/dummy-logger/svc-int-ing-logger.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummy-logger-int-ing-lb
  namespace: default
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
    service.beta.kubernetes.io/azure-load-balancer-internal-subnet: "ing-1-subnet"
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: dummy-logger
  type: LoadBalancer
  externalTrafficPolicy: Local
