logging/dummy-logger/svc-int-logger.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummy-logger-int-lb
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: dummy-logger
  type: LoadBalancer
  externalTrafficPolicy: Local
