logging/dummy-logger/svc-lb-pl-logger.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummy-logger-pl-pub
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: dummy-logger
  type: LoadBalancer
  externalTrafficPolicy: Local
