logging/dummy-logger/svc-lb-rg-ing-logger.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummy-logger-lb-ing-lb
  namespace: default
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: "kub_ter_a_m_appgw5"
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: dummy-logger
  type: LoadBalancer
  externalTrafficPolicy: Local
