logging/dummy-logger/svc-logger.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummy-logger
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: dummy-logger
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: dummy-logger-metrics
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: dummy-logger
  type: ClusterIP
