logging/dummy-logger/svc-node-logger.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummy-logger-node
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: dummy-logger
  type: NodePort
