logging/dummy-logger/ing-svc-logger.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: logger-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: 13.70.120.200.xip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: dummy-logger
          servicePort: 80
      - path: /dummy-logger-cluster(/|$)(.*)
        backend:
          serviceName: dummy-logger-cluster
          servicePort: 80
      - path: /dummy-logger-int-lb(/|$)(.*)
        backend:
          serviceName: dummy-logger-int-lb
          servicePort: 80
      - path: /dummy-logger-pub-lb(/|$)(.*)
        backend:
          serviceName: dummy-logger-pub-lb
          servicePort: 80
      - path: /dummy-logger-pl-pub(/|$)(.*)
        backend:
          serviceName: dummy-logger-pl-pub
          servicePort: 80
      - path: /dummy-logger-node(/|$)(.*)
        backend:
          serviceName: dummy-logger-node
          servicePort: 80
